# amavisd-milter

./: .CHANGES.swp  .editorconfig  .gitignore  AMAVISD-MILTER.md  AUTHORS  CHANGES  CONTRIBUTING.md  INSTALL  LICENSE  Makefile.am  README  README.md  TODO  amavisd-milter.spec.in  autoconf.in  autoconf.sh.in  configure.ac
.circleci/: config.yml
aclocal/: .gitignore  ac_cpp_func.m4  acinclude.m4  acx_pthread.m4  ax_path_milter.m4  dirfd.m4  eilseq.m4  eoverflow.m4
amavisd-milter/: .gitignore  Makefile.am  amavisd-milter.8  amavisd-milter.h  amavisd.c  log.c  main.c  mlfi.c
compat/: .editorconfig  .gitignore  Makefile.am  compat.h  daemon.c  fts_compat.h  fts_open.c  mkdtemp.c  read_sock.c  strlcpy.c  write_sock.c
